--- a/kaiping-ADs.conf
+++ b/kaiping-ADs.conf
@@ -16,16 +16,16 @@
 ^https?:\/\/newclient\.map\.baidu\.com\/yongche\/order\/yongche\/homeandcompany url reject-200
 ^https?:\/\/afd\.baidu\.com url reject-dict
 #以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、Keep、百度贴吧、知乎、什么值得买、高德地图、小红书】去广告
-;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
-;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf
-;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
-;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf
-;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/KeepStyle.conf
-;https://github.com/app2smile/rules/raw/master/module/tieba-qx.conf
-;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/zhihu/zhihu_plus.qxrewrite
-;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/smzdm/smzdm_remove_ads.qxrewrite
-;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
-;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/XiaoHongShu.conf
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/KeepStyle.conf
+https://github.com/app2smile/rules/raw/master/module/tieba-qx.conf
+https://github.com/blackmatrix7/ios_rule_script/raw/master/script/zhihu/zhihu_plus.qxrewrite
+https://github.com/blackmatrix7/ios_rule_script/raw/master/script/smzdm/smzdm_remove_ads.qxrewrite
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/XiaoHongShu.conf
 # ======= 0~9 ======= #
 #91视屏屏蔽开屏广告
 ^https?:\/\/.*\/(common\/splash_config|m_user\/(check_phone|behavior_verification_code)) url reject-200
@@ -336,7 +336,7 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 ^https?:\/\/.*\/yyting\/advertclient\/ClientAdvertList.action url reject
 # ======= M ======= #
 #埋堆堆屏蔽开屏广告
-;^https?:\/\/mob\.mddcloud\.com\.cn url reject-200
+^https?:\/\/mob\.mddcloud\.com\.cn url reject-200
 #美团外卖屏蔽开屏广告
 ^https?:\/\/wmapi\.meituan\.com\/api\/v7\/(startpicture|openscreen) url reject-200
 ^https?:\/\/img\.meituan\.net\/bizad\/.*.jpg url reject-200
