更新 kaiping-ADs.conf

--- a/kaiping-ADs.conf
+++ b/kaiping-ADs.conf
@@ -335,8 +335,8 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 # > LanRenTingShu
 ^https?:\/\/.*\/yyting\/advertclient\/ClientAdvertList.action url reject
 # ======= M ======= #
-#埋堆堆屏蔽开屏广告
-^https?:\/\/mob\.mddcloud\.com\.cn url reject-200
+#埋堆堆屏蔽开屏广告(需禁用,否则报错)
+;^https?:\/\/mob\.mddcloud\.com\.cn url reject-200
 #美团外卖屏蔽开屏广告
 ^https?:\/\/wmapi\.meituan\.com\/api\/v7\/(startpicture|openscreen) url reject-200
 ^https?:\/\/img\.meituan\.net\/bizad\/.*.jpg url reject-200
