--- a/Profiles.conf
+++ b/Profiles.conf
@@ -41,6 +41,7 @@ server = 223.5.5.5
 server = 114.114.114.114
 server = 119.29.29.29
 server = 8.8.8.8
+server = 9.9.9.9
 
 #DoH
 # DoH服务器(DNS over HTTPS)以加密的HTTPS协议进行DNS解析请求，避免原始DNS协议中用户的DNS解析请求被窃听或者修改的问题（例如中间人攻击）来达到保护用户隐私的目的
