--- a/Profiles.conf
+++ b/Profiles.conf
@@ -285,7 +285,8 @@ https://ybnet.ga/rewrite/adguard.conf, tag=AdGuard, update-interval=-1, opt-pars
 https://ybnet.ga/rewrite/bfs.conf, tag=BingAI For Safari, update-interval=-1, opt-parser=true, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf, tag=墨鱼去开屏2.0, update-interval=-1, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf, tag=微博去广告2, update-interval=-1, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/startup/startup.snippet, tag=去开屏广告, update-interval=-1, opt-parser=true, enabled=false
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/startup/startup.snippet, tag=去
+, update-interval=-1, opt-parser=true, enabled=false
 https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/documents.js, tag=documents+解锁订阅, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/xt.js, tag=醒图+解锁VIP, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/arqt.js, tag=傲软抠图-专业图片+解锁VIP, update-interval=-1, opt-parser=true, enabled=true
@@ -294,7 +295,7 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 https://raw.githubusercontent.com/Neurogram-R/Quantumult-X/main/snippet/Dualsub.snippet, tag=Dualsub(双语字幕,搭配快捷方式), update-interval=2592000, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf, tag=YouTube去广告+后台, update-interval=-1, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/id77/QuantumultX/master/rewrite/Youtube_CC.conf, tag=YouTube中文字幕, update-interval=-1, opt-parser=false, enabled=false
-https://raw.githubusercontent.com/kkkvvvv/Filter/main/kaiping-ADs.conf, tag=开屏广告, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/kkkvvvv/Filter/main/kaiping-ADs.conf, tag=开屏广告(修正), update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/AllInOne/AllInOne.conf, tag=AllInOne(汇总Advertising,AdvertisingScript,Redirect), update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mtxx.js, tag=美图秀秀, update-interval=-1, opt-parser=true, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=bilibili去广告, update-interval=-1, opt-parser=false, enabled=true
