--- a/Rewrite/baidusearchUA.conf
+++ b/Rewrite/baidusearchUA.conf
@@ -10,7 +10,7 @@
 
 
 
-^https?://www.bing.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
+^https?://www.baidu.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
 
 
 
