--- a/Rewrite/baidusearchUA.conf
+++ b/Rewrite/baidusearchUA.conf
@@ -10,8 +10,8 @@
 
 
 
-^https?://www.baidu.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
+^https?://*.baidu.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
 
 
 
-hostname = www.baidu.com
+hostname = *.baidu.com
