--- a/Rewrite/baidusearchUA.conf
+++ b/Rewrite/baidusearchUA.conf
@@ -10,8 +10,9 @@
 
 
 
-^https?://*.baidu.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
+^https?://www.baidu.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
+^https?://m.baidu.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
 
 
 
-hostname = *.baidu.com
+hostname = www.baidu.com
