--- a/Rewrite/BaiduSearch.conf
+++ b/Rewrite/BaiduSearch.conf
@@ -11,6 +11,7 @@
 
 
 ^https?://www.baidu.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
+^https?://m.baidu.com url script-request-header https://raw.githubusercontent.com/kkkvvvv/QuantumultX/main/Rewrite/baidusearchUA.js
 
 
 
