更新 baidusearchUA.conf

--- a/Rewrite/baidusearchUA.conf
+++ b/Rewrite/baidusearchUA.conf
@@ -15,4 +15,4 @@
 
 
 
-hostname = www.baidu.com, mbd.baidu.com, m.baidu.com
+hostname = www.baidu.com, mbd.baidu.com, m.baidu.com, baijiahao.baidu.com
